# humanpose3d_backend

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  CLAUDE.md.bak  PROGRESS.md  README.md  SESSION_2026-01-10.md  anatomical_constraints_gui.py  codex.txt  db.sqlite3  humanpose3d.spec.template  main.py  manage.py  pyproject.toml  requirements-neural.txt  requirements.txt  run_feature_tests.py  run_macos|linux.sh  run_windows.bat  setup_videopose3d.py  training_data_CORRECT.png~RF45566d.TMP  visualize_interactive.py
.claude/: settings.json
data/: .gitignore  download_instructions.txt
docs/: AGENTS.md  APPLICATION.md  ARCHITECTURE.md  AUGMENTED_MARKER_FILTERING.md  AUGMENTED_MARKER_FIX_2026-01-09.md  BUILD_LOG.md  CHANGELOG.md  CLAUDE_EXTENDED.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE_2026-01-09.md  CLEANUP_RECOMMENDATIONS.md  FLK_SETUP.md  MODEL_DOWNLOAD.md  MULTI_CONSTRAINT_OPTIMIZATION.md  NEURAL_MODELS.md  OUTPUT_ORGANIZATION.md  PATHS_QUICK_REFERENCE.md  PATH_CENTRALIZATION.md  PIPELINE.md  POF_EXPLANATION.md  POF_GNN_MODEL.md  PROGRESS.md  PYINSTALLER_BUNDLING.md  README.md  TESTING_REPORT.md  VIDEOPOSE3D_SETUP.md  decision time.txt
humanpose3d/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
notebooks/: MediaPipe.ipynb
scripts/: apply_depth_refinement.py  auto_train_monitor.sh  build_installer.py  build_setup_and_run_exe.py  compare_pelvis_output.py  convert_aistpp_parallel.py  convert_aistpp_to_training.py  convert_human36m_to_training.py  convert_humaneva_to_training.py  debug_pelvis_diff.py  debug_view_angle.py  download_aistpp_cameras.py  (+25 more)
(+209317 files in other folders)
