[project]
name = "humanpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pose2sim>=0.10.0",
    "tensorflow>=2.13.0",
]

[dependency-groups]
neural = [
    "einops>=0.8.1",
    "tensorboard>=2.18.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

