[project]
name = "humanpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pose2sim>=0.10.0",
    "tensorflow>=2.13.0",
    "onnxruntime-gpu>=1.23.0",
    "django>=6.0.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
neural = [
    "einops>=0.8.1",
    "ezc3d>=1.5.0",
    "tensorboard>=2.18.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.66.0",
]

